--- a/src/content/docs/convenios/convenio-1990-1991.mdx
+++ b/src/content/docs/convenios/convenio-1990-1991.mdx
@@ -4,7 +4,7 @@ description: Convenio colectivo de Mahou S.A de 1990-1991
 ---
 
 import { Image } from 'astro:assets'
-import frontpage from '../../../assets/frontpages/convenio-1990-1991.jpg'
+import frontpage from '../../../assets/frontpages/convenio-1990-1991.jpeg'
 import anexo2 from '../../../assets/tables/convenio-1990-1991/anexo2.jpg'
 import anexo3 from '../../../assets/tables/convenio-1990-1991/anexo3.jpg'
 
